.metadata/.plugins/org.eclipse.cdt.ui/TestJan.build.log
21:45:12 **** Incremental Build of configuration Debug for project TestJan ****
make -j4 all 
arm-none-eabi-gcc "../Core/Src/main.c" -mcpu=cortex-m4 -std=gnu11 -g3 -DDEBUG -DUSE_HAL_DRIVER -DSTM32L412xx -c -I../Core/Inc -I../Drivers/STM32L4xx_HAL_Driver/Inc -I../Drivers/STM32L4xx_HAL_Driver/Inc/Legacy -I../Drivers/CMSIS/Device/ST/STM32L4xx/Include -I../Drivers/CMSIS/Include -O0 -ffunction-sections -fdata-sections -Wall -fstack-usage -MMD -MP -MF"Core/Src/main.d" -MT"Core/Src/main.o" --specs=nano.specs -mfpu=fpv4-sp-d16 -mfloat-abi=hard -mthumb -o "Core/Src/main.o"
../Core/Src/main.c: In function 'main':
../Core/Src/main.c:111:36: warning: pointer targets in passing argument 2 of 'HAL_UART_Transmit' differ in signedness [-Wpointer-sign]
  111 |          HAL_UART_Transmit(&huart2,str,strlen(str),10); // Sending in normal mode
      |                                    ^~~
      |                                    |
      |                                    char *
In file included from ../Core/Inc/stm32l4xx_hal_conf.h:450,
                 from ../Drivers/STM32L4xx_HAL_Driver/Inc/stm32l4xx_hal.h:29,
                 from ../Core/Inc/main.h:30,
                 from ../Core/Src/main.c:20:
../Drivers/STM32L4xx_HAL_Driver/Inc/stm32l4xx_hal_uart.h:1674:79: note: expected 'const uint8_t *' {aka 'const unsigned char *'} but argument is of type 'char *'
 1674 | HAL_StatusTypeDef HAL_UART_Transmit(UART_HandleTypeDef *huart, const uint8_t *pData, uint16_t Size, uint32_t Timeout);
      |                                                                ~~~~~~~~~~~~~~~^~~~~
../Core/Src/main.c: In function 'MX_ADC1_Init':
../Core/Src/main.c:236:22: error: 'hadc2' undeclared (first use in this function); did you mean 'hadc1'?
  236 |   HAL_ADC_Start_IT (&hadc2);
      |                      ^~~~~
      |                      hadc1
../Core/Src/main.c:236:22: note: each undeclared identifier is reported only once for each function it appears in
make: *** [Core/Src/subdir.mk:34: Core/Src/main.o] Error 1
"make -j4 all" terminated with exit code 2. Build might be incomplete.

21:45:13 Build Failed. 2 errors, 1 warnings. (took 612ms)

